--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
 [config]
 #folder = C:\Users\user\Documents\Compatio\DataEngineering\Prototype_ML_Data_Quality_Check\
-folder = output\
 #modelFolder = C:\Users\user\Documents\Compatio\DataEngineering\Prototype_ML_Data_Quality_Check\fishing_pickle\
+output_folder = output\
+read_folder = input\
 modelFolder = fishing_pickle\
 stop_words_list = ['aaa', 'ast', 'added', 'adds', 'alike', 'anytime', 'ask', 'brings', 'decision', 'decisions', 'difficult', 'details', 'FALSE', 'info', 'internet', 'knew', 'vimeo',
                        'usa', 'TRUE', 'totally', 'theres', 'term', 'terms', 'suggests', 'suggested', 'specifically', 'specified', 'say', 'result', 'resulted', 'requests', 'likely', 'knowledgeable', 'just']
-inputfile = raw_desc_cleaned.csv
+inputfile = midday_testing.csv
 extraction_query = match(i:Industry) -- (c:Category) -- (p:Product) where i.name in["Cycling"] return p.uid as UID, p.name as Name,c.name as Category
 model_pkl_name = reds_trained_nb_model.pkl
 vec_pkl_name = reds_vectors.pkl
