--- a/config.ini
+++ b/config.ini
@@ -11,5 +11,6 @@ extraction_query = match(i:Industry) -- (c:Category) -- (p:Product) where i.name
 model_pkl_name = reds_trained_nb_model.pkl
 vec_pkl_name = reds_vectors.pkl
 attach_flag = 0
+notify = 0
 ##########################################
 #Moved to env
